# kobject

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: Makefile  ROADMAP.md  api.rst  changelog.rst  conf.py  index.rst
kobject/: __init__.py  _compat.py  _json.py  common.py  core.py  fields.py  from_json.py  schema.py  serialization.py  to_json.py  validation.py  validator.py
kobject/from_json/: __init__.py
kobject/to_json/: __init__.py
kobject/validator/: __init__.py
tests/: conftest.py
tests/kobject/: test_edge_cases.py  test_future_annotations.py  test_json_backend.py  test_main.py  test_thread_safety.py
tests/kobject/common/: test_main.py
tests/kobject/field_metadata/: test_main.py
tests/kobject/from_json/: test_main.py
tests/kobject/schema/: test_main.py
tests/kobject/to_json/: test_main.py
tests/kobject/validator/: test_coverage.py  test_main.py
