[tool.poetry]
name = "kobject"
version = "0.5.3"
description = "Know your object is a attribute type checker"
authors = ["Marco Sievers de Almeida Ximit Gaia <im.ximit@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [
    { include = "kobject" }
]


[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mutatest = "^3.1.0"
pylint = "^2.15.10"
black = "^23.10.1"
pre-commit = "^3.5.0"

[tool.poetry.urls]
homepage = "https://github.com/CenturyBoys/kobject"
documentation = "https://github.com/CenturyBoys/kobject/blob/main/README.md"
repository = "https://github.com/CenturyBoys/kobject/tree/main"
bugs = "https://github.com/CenturyBoys/kobject/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
