[tool.poetry]
name = "kobject"
version = "0.6.6"
description = "Know your object is a attribute type checker"
authors = ["Marco Sievers de Almeida Ximit Gaia <im.ximit@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [
    { include = "kobject" }
]


[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.1"
mypy = "^1.8"
mutatest = "^3.1.0"
pre-commit = "^3.5.0"
ruff = "^0.11.13"

[tool.poetry.urls]
homepage = "https://github.com/CenturyBoys/kobject"
documentation = "https://github.com/CenturyBoys/kobject/blob/main/README.md"
repository = "https://github.com/CenturyBoys/kobject/tree/main"
bugs = "https://github.com/CenturyBoys/kobject/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=kobject --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
