[project]
name = "kobject"
version = "0.8.0"
description = "Know your object is a attribute type checker"
authors = [{ name = "Marco Sievers de Almeida Ximit Gaia", email = "im.ximit@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.optional-dependencies]
# Faster JSON encode/decode; picked up automatically when installed.
orjson = ["orjson>=3"]

[project.urls]
homepage = "https://github.com/CenturyBoys/kobject"
documentation = "https://github.com/CenturyBoys/kobject/blob/main/README.md"
repository = "https://github.com/CenturyBoys/kobject/tree/main"
bugs = "https://github.com/CenturyBoys/kobject/issues"

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.11,<0.12",
    "pre-commit>=3.5",
    "hypothesis>=6.100",
    "orjson>=3",
]
docs = [
    "sphinx>=7.2",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=1.25",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.sdist]
include = ["kobject"]

[tool.hatch.build.targets.wheel]
include = ["kobject"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=kobject --cov-report=term-missing --cov-report=xml"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by the formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM", "ARG"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
